dead letters catcher, gatling test

--- a/http/src/main/resources/application.conf
+++ b/http/src/main/resources/application.conf
@@ -2,8 +2,8 @@ akka{
   loglevel = INFO
   actor.provider = "akka.cluster.ClusterActorRefProvider"
 
-  log-dead-letters = 0
-  log-dead-letters-during-shutdown = off
+  log-dead-letters = 1000
+  log-dead-letters-during-shutdown = on
 
   cluster {
     seed-nodes = [
