implement reactive mongo to save users (basic model)

--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -33,4 +33,13 @@ actors {
   userPartnersName = ["userfrontend"]
 }
 
+db {
+  hosts = ["localhost"]
+  port = 27017
+  dataBaseName = "akka-cluster"
+  collections {
+    user = "user"
+  }
+}
+
 kamon.sigar.folder="./native"
